# gh-sync

./: .ghalint.yaml  .gitignore  .tagpr  .worktreeinclude  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  action.yml  mise.toml  rust-toolchain.toml
.claude/artifacts/api-422-guards/: PLAN.md  REVIEW.md
.devcontainer/: postStartCommand.sh  traefik.sh
.github/: labeler.yml  project-config.json  release.yml
.github/actions/act-actionlint/: action.yaml
.github/actions/act-audit/: action.yaml
.github/actions/act-cleanup/: action.yaml
.github/actions/act-prebuild-container/: action.yaml
.github/actions/act-setup-rust/: action.yaml
.github/actions/upload-release-assets/: action.yaml
.github/gh-sync/: config.yaml  schema.json
.github/gh-sync/patches/: Cargo.toml.patch  mise.toml.patch
.github/infra/: TEMPLATE.yaml
.github/infra/templates/: File.yaml  Repository.yaml
.github/workflows/: _orchestrator.yaml  gh-sync.yaml  miri.yaml  pr-labeler.yaml  release.yaml  rust-ci.yaml  tagpr.yaml
.mise/: overrides.toml  tasks.toml
ast-rules/: _rules.md
crates/brust/: Cargo.toml
crates/gh-sync/: Cargo.toml
crates/gh-sync-engine/: Cargo.toml
crates/gh-sync-engine/src/: lib.rs  output.rs  upstream.rs
crates/gh-sync-engine/tests/: preserve_markers.rs
crates/gh-sync-manifest/: Cargo.toml
crates/gh-sync-manifest/src/: error.rs  lib.rs  manifest.rs  merge.rs
crates/gh-sync/src/: cli.rs  main.rs
crates/gh-sync/src/pr/: cli.rs  (+1 more)
crates/gh-sync/tests/: integration_test.rs
docs/specs/: 2026-04-16-api-422-guards-design.md  template-sync.ja.md
(+44 files in other folders)
